--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.1.0",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
