--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.3",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
     "video-react": "^0.16.0",
