--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.2.0",
     "@reduxjs/toolkit": "^2.1.0",
+     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "concurrently": "^8.2.2",
     "copy-to-clipboard": "^3.3.3",
